--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,9 @@
 
   <body>
     <main>
-    <%= yield %>
+      <section class = "text">
+        <%= yield %>
+    </section>
+    </main>
   </body>
-  </main>
 </html>
