--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,22 +1,14 @@
 <h1>Please Sign Up</h1>
 
-<!-- <%=form_for @user do |f|%>
+<%=form_for @user do |f|%>
   <%=f.label "Name:"%><br>
   <%=f.text_field :name%><br>
   <%=f.label "Password:"%><br>
   <%=f.password_field :password%><br>
   <%=f.label "Confirm Password:"%><br>
-  <%=f.password_field :password_confirmation%><br>
+  <%=f.password_field :password_confirmation%><br><br>
+  <%=f.submit "Sign Up", user_path(@user)%>
 <%end%>
 
 
-<%= link_to('Log in with Facebook!', '/auth/facebook') %> -->
-
-	<% if session[:user_id] %>
-	<h1><%= @user.name %></h1>
-	<h2>Email: <%= @user.email %></h2>
-	<h2>Facebook UID: <%= @user.uid %></h2>
-	<img src="<%= @user.image %>">
-	<% else %>
-	<%= link_to('Log in with Facebook!', '/auth/facebook') %>
-	<% end %>
+<%= link_to('Log in with Facebook', '/auth/facebook') %>
