--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
     <%=f.password_field :password%><br>
     <%=f.label "Confirm Password:"%><br>
     <%=f.password_field :password_confirmation%><br><br>
-    <%=f.submit "Sign Up", user_path(@user)%>
+    <%=f.submit "Sign Up"%>
   <%end%>
 
 
