--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,10 @@
       <%=link_to "All Genres", genres_path%>
       <%=link_to "Log Out", logout_path, method:'post', action:'destroy'%>
       <%end%>
+      <%if !logged_in?%>
+      <%=link_to "Sign Up", signup_path%>
+      <%=link_to "Log In", login_path%>
+      <%end%>
     </nav>
   </header>
 
