--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,5 +1,8 @@
 	<%= form_for(@review) do |f| %>
-	<%f.label "Book Rating:"%><br>
+  <%= f.hidden_field :user_id %>
+  <%=f.label "Book Title"%>
+  <%=f.text_field :book_title%>
+	<%=f.label "Book Rating:"%><br>
 	<%= f.text_field :rating %><br>
   <%=f.label "Book Review:"%><br>
   <%= f.text_field :content %><br>
