--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,3 @@
-	<%= form_tag book_path(@book), method: "put" do %>
+	<%= form_tag book_path(@book), method: "patch" do %>
 	  <%= render "form" %>
 	<% end %>
