--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,3 +1,3 @@
-	<%= form_tag review_path(@review), method: "put" do %>
+	<%= form_tag review_path(@review), method: "patch" do %>
 	  <%= render "form" %>
 	<% end %>
