--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -2,6 +2,6 @@
 
 <ol>
 <%@authors.each do |author|%>
-<li><%=linke_to author.name, author_path(author)%> </li>
+<li><%=link_to author.name, author_path(author)%> </li>
 <%end%>
 </ol>
