--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,19 +1,13 @@
-	<!-- <%= form_for(@book) do |f| %>
-  <%= f.hidden_field :author_id %>
-  <%=f.label "Title"%>
-  <%=f.text_field :title%>
-	<%=f.label "Author:"%><br>
-	<%= f.text_field :rating %><br>
-  <%=f.submit%> -->
 
 <%= form_for @book do |f| %>
-<%=f.label "Title"%>
-<%=f.text_field :title%>
+<%=f.label "Title:"%>
+<%=f.text_field :title%><br><br>
+<%=f.label "Author:"%>
   <%= f.text_field :author_name, list: "authors_autocomplete" %>
   <datalist id="authors_autocomplete">
     <% Author.all.each do |author| %>
-      <option value="<%= author.name %>">
-    <% end %>
-  </datalist>
+      <option value="<%= author.name %>"><br>
+    <% end %><br><br>
+  </datalist><br><br>
   <%= f.submit "Add Book"%>
 <% end %>
