--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,9 +1,11 @@
+<h1><%=@book.title%></h1>
+
 	<%= form_for(@review) do |f| %>
   <%= f.hidden_field :user_id %>
-  <%=f.label "Book Title"%>
-  <%=f.text_field :book_title%>
-	<%=f.label "Book Rating:"%><br>
-	<%= f.text_field :rating %><br>
+	<%= f.hidden_field :book_id %>
+	<%=f.label "Book Rating:"%>
+	<%= f.text_field :rating %><br><br>
   <%=f.label "Book Review:"%><br>
-  <%= f.text_field :content %><br>
+  <%= f.text_area :content, cols: "100", rows: "10" %><br>
   <%=f.submit%>
+	<%end%>
