--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,10 +1,11 @@
-<h1>All Authors</h1>
+<h1 class="index-head">All Authors</h1>
+<text class="new"><%=link_to "New Author", new_author_path%></text>
 <%if !params[:genre].blank?%>
   <% @authors = Author.joins(books: :genres)%>
   <%=@filtered_genre = @authors.first.genres.first.name%>
 <% end %>
 
-<text>Filter Authors By Genres:</text>
+<h4>Filter Authors By Genres:</h4>
 <%= form_tag("/authors", method: "get") do %>
 <%= select_tag "genre", options_from_collection_for_select(Genre.all, "id", "name"), include_blank: true %>
 <%= submit_tag "Filter" %>
