--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -11,20 +11,22 @@
 <%= submit_tag "Filter" %>
 <% end %><br>
 
-<%if @filtered_genre%>
+
 <h3><%=@filtered_genre%> Books</h3>
-<%end%>
 
 
-<ul>
+
+<ol>
 <%@books.each do |book|%>
 <li><h3><%=book.title%></h3></li>
+<ul>
 <li><h3>Genres</h3></li>
-  <%book.genres.each do |genre|%>
   <ul>
-    <li><h3><%=genre.name%></h3></li>
+  <%book.genres.each do |genre|%>
+    <li><h3><%=link_to genre.name, genre_path(genre)%></h3></li>
+<%end%>
   </ul>
-<%end%>
 <li><h3><%=link_to "Reviews", book_reviews_path(book)%></h3></li>
-<%end%>
 </ul>
+<%end%>
+</ol>
