new review and review show

--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -26,7 +26,7 @@
     <li><h3><%=link_to genre.name, genre_path(genre)%></h3></li>
 <%end%>
   </ul>
-<li><h3><%=link_to "Reviews", book_reviews_path(book)%></h3></li>
+<li><h3><%=link_to "Reviews", book_path(book)%></h3></li>
 </ul>
 <%end%>
 </ol>
