--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,11 +1,11 @@
 <h1 class="index-head"><%=@book.title%></h1>
 <text class="new"><%=link_to "New Review", new_book_review_path(@book)%></text>
-<h3>Author: <%=@book.author_name%></h3>
+<h3>Author: <%=link_to @book.author_name, author_path(@book.author)%></h3>
 <h3>Genres</h3>
 
 <ul>
 <%@book.genres.each do |genre|%>
-  <li> <%=genre.name%> </li>
+  <li> <%=link_to genre.name, genre_path(genre)%> </li>
 <%end%>
 </ul>
 
