--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,7 +1,8 @@
-<h1>All Genres</h1>
+<h1 class="index-head">All Genres</h1>
+<text class="new"><%=link_to "New Genre", new_genre_path%></text>
 
 <ol>
-<%=@genres.each do |genre|%>
-<li><%=link_to genre.name, genre_path(genre)%></li>
-<%end%>
+  <%@genres.each do |genre|%>
+  <li><%=link_to genre.name, genre_path(genre)%></li>
+  <%end%>
 </ol>
