--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -2,7 +2,7 @@
 <text class="new"><%=link_to "New Author", new_author_path%></text>
 <%if !params[:genre].blank?%>
   <% @authors = Author.joins(books: :genres).where('genres.id = ?', params[:genre]).uniq%>
-  <%=@filtered_genre = @authors.first.genres.first.name%>
+  <%@filtered_genre = @authors.first.genres.first.name%>
 <% end %>
 
 <h4>Filter Authors By Genres:</h4>
