--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,3 +1,17 @@
+<% if @author.errors.any? %>
+  <div id="error_explanation">
+    <h2>
+      <%= pluralize(@author.errors.count, "error") %>
+     		preventing you from adding an author:
+      </h2>
+    <ul>
+    <% @author.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 	<%= form_tag authors_path do %>
 	  <%= render "form" %>
 	<% end %>
