--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,18 @@
+<% if @book.errors.any? %>
+  <div id="error_explanation">
+    <h2>
+      <%= pluralize(@book.errors.count, "error") %>
+     		preventing you from adding an author:
+      </h2>
+    <ul>
+    <% @book.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
+
 	<%= form_tag book_path(@book), method: "patch" do %>
 	  <%= render "form" %>
 	<% end %>
