--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,17 @@
+<% if @review.errors.any? %>
+  <div id="error_explanation">
+    <h2>
+      <%= pluralize(@review.errors.count, "error") %>
+     		preventing you from adding an author:
+      </h2>
+    <ul>
+    <% @review.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 	<%= form_tag reviews_path do %>
 	  <%= render "form" %>
 	<% end %>
