working on updating reviews

--- a/app/views/genres/edit.html.erb
+++ b/app/views/genres/edit.html.erb
@@ -12,6 +12,6 @@
   </div>
 <% end %>
 
-	<%= form_tag book_path(@genre), method: "patch" do %>
+	<%= form_tag genre_path(@genre), method: "patch" do %>
 	  <%= render "form" %>
 	<% end %>
