--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -13,6 +13,6 @@
 <% end %>
 
 
-	<%= form_tag book_review_path(@review), method: "patch" do %>
+	<%= form_tag review_path(@review), method: "patch" do %>
 	  <%= render "form" %>
 	<% end %>
