--- a/app/views/genres/_form.html.erb
+++ b/app/views/genres/_form.html.erb
@@ -2,5 +2,5 @@
 <%= form_for @genre do |f| %>
 <%=f.label "Name:"%>
 <%=f.text_field :name%><br><br>
-  <%= f.submit "Add Genre"%>
+  <%= f.submit %>
 <% end %>
