--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       <%=link_to "Books", books_path%>
       <%=link_to "Authors", authors_path%>
       <%=link_to "Genres", genres_path%>
+      <%=link_to "Users", users_path%>
       <%=link_to "Log Out", logout_path, method:'post', action:'destroy'%>
       <%end%>
       <%if !logged_in?%>
