--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,6 @@
 
 <ol>
 <%@users.order(:name).each do |user|%>
-  <li><%=link_to user.name, user_path(user)%> - <%=link_to "#{user.reviews.count} Reviews", user_path(user)%></li>
+  <li><%=link_to "#{user.name} - #{user.reviews.count} Reviews", user_path(user)%></li>
 <%end%>
 </ol>
