--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -12,7 +12,7 @@
 <% end %><br>
 
 <%if @filtered_genre%>
-<h3><%=@filtered_genre%> Books</h3>
+<h3><%=@filtered_genre%> Authors</h3>
 <%end%>
 
 <div>
