--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -15,9 +15,9 @@
 
 	<%= form_tag review_path(@review), method: "patch" do %>
 	  <%= render "form" %>
-	<% end %>
+	<% end %><br>
 
 
 	<%= form_tag book_review_path(@review.book, @review), method: "delete" do %>
-	<%= submit_tag "Delete Review" %>
+	<%= submit_tag "Delete Review", class:"delete" %>
 	<% end %>
