--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -2,7 +2,7 @@
   <div id="error_explanation">
     <h2>
       <%= pluralize(@review.errors.count, "error") %>
-     		preventing you from adding an author:
+     		preventing you from adding a review:
       </h2>
     <ul>
     <% @review.errors.full_messages.each do |msg| %>
