--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
   <div id="error_explanation">
     <h2>
       <%= pluralize(@user.errors.count, "error") %>
-     		preventing you from adding an author:
+     		preventing you from signing up:
       </h2>
     <ul>
     <% @user.errors.full_messages.each do |msg| %>
