--- a/app/views/genres/new.html.erb
+++ b/app/views/genres/new.html.erb
@@ -2,7 +2,7 @@
   <div id="error_explanation">
     <h2>
       <%= pluralize(@genre.errors.count, "error") %>
-     		preventing you from adding an author:
+     		preventing you from adding a genre:
       </h2>
     <ul>
     <% @genre.errors.full_messages.each do |msg| %>
