--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
-<h1>All Users</h1>
+<h1 class="index-head">All Users</h1>
+<%=link_to "Top Reviewers", users_most_reviews_path, class:"new"%>
 
 <ol>
 <%@users.alphabetized.each do |user|%>
