--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,7 +2,9 @@
    <div class="notice"><%= flash[:notice] %></div>
  <% end %>
 
-<% if !params[:author].blank?%>
+<%if !params[:author].blank? && !params[:genre].blank?%>
+<% @books = Book.joins(:genres).where('genres.id = ?', params[:genre]).where(author: params[:author]) %>
+<% elsif !params[:author].blank?%>
  <% @books = Book.where(author: params[:author]) %>
  <%@filtered_author = @books.first.author.name unless @books.empty?%>
 <%elsif !params[:genre].blank?%>
