js next function

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
 	<% end %>
 
 
-<h2 data-id="<%= @user.id %>"><%=@user.name%>'s Reviews</h2>
+<h2 data-id="<%= @user.id %>" class="userShow"><%=@user.name%>'s Reviews</h2>
 
 <h3>Book Reviews</h3>
 
