--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -2,14 +2,16 @@
    <div class="notice"><%= flash[:notice] %></div>
  <% end %>
 
+<section class="js-book" data-book-id="<%=@review.book.id%>"></section>
+<a href="#" class="js-next" data-id="<%=@review.id%>">Next...</a>
 
-<h2><%=link_to @review.book_title, book_path(@review.book)%> Review</h2>
-<h3>Author: <%=link_to @review.book.author_name, author_path(@review.book.author)%></h3>
-<h3>Reviewer: <%=link_to @review.user.name, user_path(@review.user)%></h3>
+<h2 class="bookTitle"><%=link_to @review.book_title, book_path(@review.book)%> Review</h2>
+<h3 class="bookAuthor">Author: <%=link_to @review.book.author_name, author_path(@review.book.author)%></h3>
+<h3 class="bookReviewer">Reviewer: <%=link_to @review.user.name, user_path(@review.user)%></h3>
 
-<h3>Rating: <%=@review.rating%> Stars</h3>
+<h3 class="bookRating">Rating: <%=@review.rating%> Stars</h3>
 
-<p><%=@review.content%></p><br><br><br><br>
+<p class="bookContent"><%=@review.content%></p><br><br><br><br>
 
 <%if current_user.id == @review.user_id%>
 <%=link_to "Edit Review", edit_book_review_path(@review.book, @review)%>
