new review form dynamic submit

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -15,3 +15,11 @@
 	<%= form_tag reviews_path do %>
 	  <%= render "form" %>
 	<% end %>
+
+  <section id="reviewResult">
+    <h2 id="bookReviewTitle"></h2>
+    <h3 id="bookReviewAuthor"></h3>
+    <h3 id="bookReviewReviewer"></h3>
+    <h3 id="bookReviewRating"></h3>
+    <p id="bookReviewContent"></p><br><br><br><br>
+  </section>
