reviews show page labels

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -17,9 +17,9 @@
 	<% end %>
 
   <section id="reviewResult">
-    <h2 id="bookReviewTitle"></h2>
-    <h3 id="bookReviewAuthor"></h3>
-    <h3 id="bookReviewReviewer"></h3>
-    <h3 id="bookReviewRating"></h3>
+    Book Title: <h2 id="bookReviewTitle"></h2>
+    Author: <h3 id="bookReviewAuthor"></h3>
+    Reviewer: <h3 id="bookReviewReviewer"></h3>
+    Rating: <h3 id="bookReviewRating"></h3>
     <p id="bookReviewContent"></p><br><br><br><br>
   </section>
