--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -12,7 +12,7 @@
   </div>
 <% end %>
 
-	<%= form_tag reviews_path do %>
+	<%= form_tag reviews_path, id:"review_form" do %>
 	  <%= render "form" %>
 	<% end %>
 
