--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,6 +33,7 @@
 <% elsif @filtered_book%>
 <h3>Review(s) of <%=@filtered_book%></h3>
 <%end%><br> -->
+<h3 id="filterType"></h3>
 
 <div id="allReviews"></div>
 
